--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Pragati Institute || Best Teaching Institute for Class 6-12</title>
+    <title>Swarna Shramik || Make your life Easy With Us</title>
     <!--CSS-->
     <link rel="stylesheet" href="css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
